<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>overhead_camera_service</name>
  <version>1.0.0</version>
  <description>
    This package aimed to subscribe to the overhead cameras and as a service pass them upon a client request.
  </description>
  <maintainer email="hsa150@sfu.ca">hossein</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>custom_msg_srv</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
